# Namors

./: .gitignore  .gitmodules  Cargo.toml  README.md  checkpoints
py/: README.md  siglip2.py  siglip2.rs
src/: main.rs
src/models/: mod.rs  vision_loaders.rs
src/models/qwen2_5vl/: config.rs  inputs_processor.rs  mod.rs  text.rs  vision.rs
src/models/simnn/: simple.rs
src/models/utils/: mod.rs  unvarbuilder.rs
src/models/ves/: mod.rs  siglip2.rs
src/pipeline/: mod.rs  vision.rs  vision_model.rs
src/vision_models/: mod.rs
