[package]
name = "Namos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
mistralrs-core = { version = "0.4.0", path = "./mistral.rs/mistralrs-core" }
mistralrs-quant = { version = "0.4.0", path = "./mistral.rs/mistralrs-quant" }
mistralrs-vision = { version = "0.4.0", path = "./mistral.rs/mistralrs-vision" }
mistralrs = { version = "0.4.0", path = "./mistral.rs/mistralrs" }

candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "76819e8" }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "76819e8" }


rand = "0.9.0"
reqwest = "0.12.12"
tokio = "1.44.0"
image = { version = "0.25.1", default-features = false, features = [
    'bmp',
    'dds',
    'exr',
    'ff',
    'gif',
    'hdr',
    'ico',
    'jpeg',
    'png',
    'pnm',
    'qoi',
    'tga',
    'tiff',
    'webp',
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.0"
tracing = "0.1.41"
indicatif = "0.17.11"
tqdm = "0.7.0"
itertools = "0.14.0"
regex = "1.11.1"

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
metal = ["mistralrs-core/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
accelerate = ["mistralrs-core/accelerate"]
mkl = ["mistralrs-core/mkl"]
nccl = ["mistralrs-core/nccl"]
